ganti warna tombol seret

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </div>
                   <div class="mb-3">
                     <button type="submit" name="simpan" id="tombol-simpan" class="btn btn-primary">Simpan</button>
-                    <button type="reset" name="Reset" id="tombol-simpan" class="btn btn-warning shadow-sm">Reset</button>
+                    <button type="reset" name="Reset" id="tombol-simpan" class="btn btn-danger shadow-sm">Reset</button>
                   </div>
                 </form>
               </div>
