--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
       background-color: #ddd;
     }
       section{
-        padding-top: 3rem;
-        margin: 0px 20px 0px 20px;
+        padding-top: 1rem;
+        /*margin: 0px 20px 0px 20px;*/
       }
       .container{
-        box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
+        /*box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);*/
         padding: 25px 0px 25px 0px;
         background-color: #eee;
         border-radius: 10px;
       }
       .card{
-        margin-right: 30px;
-        margin-left: 30px;
+        margin-right: 15px;
+        margin-left: 15px;
         box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
       }
     </style>
@@ -34,7 +34,7 @@
     <section>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-sm-6">
+          <div class="col-md-6">
             <div class="card">
               <h5 class="card-header">Kios Meccu</h5>
               <div class="card-body">
@@ -53,7 +53,7 @@
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Total</label>
-                    <input type="number" name="total_bayar" class="form-control" id="total-bayar" onkeyup="kali()">
+                    <input type="number" name="total_bayar" class="form-control" id="total-bayar" onkeyup="kali()" disabled>
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Bayar</label>
@@ -61,7 +61,7 @@
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Sisa</label>
-                    <input type="number" name="uang_kembali" class="form-control" id="uang-kembali" onkeyup="kurang()">
+                    <input type="number" name="uang_kembali" class="form-control" id="uang-kembali" onkeyup="kurang()" disabled>
                   </div>
                   <div class="mb-3">
                     <button type="submit" name="simpan" id="tombol-simpan" class="btn btn-primary">Simpan</button>
