--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
         <div class="row justify-content-center">
           <div class="col-md-6">
             <div class="card">
-              <h5 class="card-header">Kios Meccu</h5>
+              <h5 class="card-header text-center fw-bold">Kios Meccu</h5>
               <div class="card-body">
-                <form action="" method="post">
+                <div class="alert alert-success d-none alert-dismissible fade show my-alert" role="alert">
+                  <strong>Berhasil!</strong> Data kios sudah disimpan.
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <form action="" method="post" name="submit-to-google-sheet">
                   <div class="mb-3">
                     <label class="form-label">Nama Barang</label>
                     <input type="text" name="nama_barang" class="form-control" id="nama-barang">
@@ -53,18 +57,22 @@
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Total</label>
-                    <input type="number" name="total_bayar" class="form-control" id="total-bayar" onkeyup="kali()" disabled>
+                    <input type="number" name="total_bayar" class="form-control" id="total-bayar" onkeyup="kali()">
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Bayar</label>
-                    <input type="number" name="besar_uang" class="form-control" id="besar-uang" onkeyup="kurang()">
+                    <input type="number" name="besar_uang" class="form-control btn-kirim" id="besar-uang" onkeyup="kurang()">
                   </div>
                   <div class="mb-3">
                     <label class="form-label">Sisa</label>
-                    <input type="number" name="uang_kembali" class="form-control" id="uang-kembali" onkeyup="kurang()" disabled>
+                    <input type="number" name="uang_kembali" class="form-control" id="uang-kembali" onkeyup="kurang()">
                   </div>
                   <div class="mb-3">
-                    <button type="submit" name="simpan" id="tombol-simpan" class="btn btn-primary">Simpan</button>
+                    <button type="submit" name="simpan" id="tombol-simpan" class="btn btn-primary btn-simpan">Simpan</button>
+                    <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                      Loading...
+                    </button>
                     <button type="reset" name="Reset" id="tombol-simpan" class="btn btn-danger shadow-sm">Reset</button>
                   </div>
                 </form>
@@ -76,6 +84,31 @@
     </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbwVDH5_ca1hJJPJoaW4GsxVrUg0V3oGL8IooVxyvPMcUUK8zm00bfOQYjhwaLS0IOD3/exec';
+      const form = document.forms['submit-to-google-sheet']
+      const btnKirim = document.querySelector('.btn-simpan');
+      const btnLoading = document.querySelector('.btn-loading');
+      const pesanBerhasil = document.querySelector('.my-alert');
+
+      form.addEventListener('submit', e => {
+        e.preventDefault();
+
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then(response => {
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            pesanBerhasil.classList.toggle('d-none');
+            form.reset();
+            console.log('Success!', response)
+          })
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
     
   </body>
 </html>
